--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 									</a></h2>
 									<p style="text-align: center;">This holds all of my Excels Projects.</p>
 								</header>
-								<a href="https://github.com/FarhanaSuci/PortfolioExcelDashboard" class="imhttps://github.com/FarhanaSuci/PortfolioExcelDashboardage main"><img src="images\Excel-image.jpg" alt="" /></a>
+								<a href="https://github.com/FarhanaSuci/PortfolioExcelDashboard" class="image main">
+  <img src="images/Excel-image.jpg" alt="Excel Projects" />
+</a>
+								<!--<a href="https://github.com/FarhanaSuci/PortfolioExcelDashboard" class="imhttps://github.com/FarhanaSuci/PortfolioExcelDashboardage main"><img src="images\Excel-image.jpg" alt="" /></a>-->
 								<ul class="actions special">
 									<li><a href="https://github.com/FarhanaSuci/PortfolioExcelDashboard" class="button large">View Project</a></li>
 								</ul>
